@@ -1,3 +1,8 @@
+2001-07-30  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/html-utilities.scm: Fixed bug with sub-balances in
+	account tables with non-default account selection.
+
 2001-07-17  Dave Peticolas  <dave@krondo.com>
 
 	* doc/sgml/C/xacc-features.sgml: Matt Krai's doc patch
